--- a/playbooks/base_app_infra/003_dns.yml
+++ b/playbooks/base_app_infra/003_dns.yml
@@ -2,7 +2,8 @@
 - name: Docker Installations on Banana PI (not root)
   hosts: bananapi
   roles:
-     - role: abbottland.dns.pihole
+    - role: abbottland.dns.pihole
+    - role: abbottland.dns.cloudflare_ddns
 
 - name: DNS Resolvers
   hosts:
@@ -10,4 +11,4 @@
     - rpi
   become: true
   roles:
-    - role: abbottland.dns.dns-resolver
+    - role: abbottland.dns.dns_resolver
