Rearrange playbooks to have docker_registry stand alone

--- a/ansible_collections/abbottland/dns/roles/pihole/tasks/main.yml
+++ b/ansible_collections/abbottland/dns/roles/pihole/tasks/main.yml
@@ -6,6 +6,7 @@
     state: directory
     mode: '0755'  
 
+# TODO: make sure this is idempotent
 - name: "Ensure etc-pihole directory exists"
   ansible.builtin.file:
     path: "{{ pihole_config_dir }}/etc-pihole"
