--- a/ansible_collections/abbottland/docker/roles/docker_daemon/tasks/main.yml
+++ b/ansible_collections/abbottland/docker/roles/docker_daemon/tasks/main.yml
@@ -6,26 +6,64 @@
     path: /etc/docker
     mode: '0755'  
 
-- name: Write hostname using jinja2
-  ansible.builtin.template:
-    src: daemon.j2
-    dest: /tmp/daemon.json
 
-- name: Replace existing docker daemon.json
-  ansible.builtin.copy:
-    remote_src: true
-    src: /tmp/daemon.json
+- name: Does /etc/docker/daemon.json file exist?
+  stat:
+    path: /etc/docker/daemon.json
+  register:
+    docker_daemon_stat_result
+
+- name: Create /etc/docker/daemon.json file if not exists
+  file:
+    path: /etc/docker/daemon.json
+    state: touch
+  when: not docker_daemon_stat_result.stat.exists
+
+# ------------------------------------
+
+- name: Load variables from file
+  slurp:
+    src: /etc/docker/daemon.json
+  register: imported_var
+
+# - name: Display decoded content
+#   debug:
+#     msg: "{{ imported_var.content | b64decode }}"
+
+# - name: Display variables
+#   debug:
+#     msg: "{{ imported_var.content | b64decode | from_json }}"
+
+- name: Append more key/values
+  set_fact:
+    imported_var: "{{ imported_var.content | b64decode | from_json | combine({docker_daemon_key: docker_daemon_value}) }}"
+
+# - name: Display updated variables
+#   debug:
+#     var: imported_var
+
+- name: Update docker daemon.json
+  ansible.builtin.copy: 
+    content: "{{ imported_var | to_nice_json }}" 
     dest: /etc/docker/daemon.json
+  notify:
+    - Restart docker daemon
   register: docker_daemon
 
-- name: Restart docker
-  when: 
-    - docker_daemon.changed
-    - not docker_daemon_skip_restart
-  ansible.builtin.systemd:
-    state: restarted
-    daemon_reload: yes
-    name: docker
+# ------------------------------------
+
+# - name: Write hostname using jinja2
+#   ansible.builtin.template:
+#     src: daemon.j2
+#     dest: /tmp/daemon.json
+
+# - name: Replace existing docker daemon.json
+#   ansible.builtin.copy:
+#     remote_src: true
+#     src: /tmp/daemon.json
+#     dest: /etc/docker/daemon.json
+#   register: docker_daemon
 
 - name: Set docker daemon changed variable
-  ansible.builtin.set_fact: "docker_daemon_changed={{ docker_daemon.changed }}"
+  ansible.builtin.set_fact: 
+    docker_daemon_changed: "{{ docker_daemon.changed }}"
