--- a/playbooks/008_backups.yml
+++ b/playbooks/008_backups.yml
@@ -1,12 +1,18 @@
 # TODO: remove this once backup service is complete.
 # NOTE: azure cli needs to be installed before pip packages
-
+# TODO: remove this once config-backup-service is done
+# pipPackages:
+  # - azure-cli
 # - name: Install azure cli
 #   hosts: rpi
 #   become: true
 #   roles:
 #     - role: home.az.cli
 
+# backup_azure_username: "{{ azure.homeSPN.username }}"
+# backup_azure_password: "{{ azure.homeSPN.password }}"
+# backup_azure_tenant: "{{ azure.homeSPN.tenant }}"
+# backup_azure_subscriptionId: "07619e8e-01a2-4b48-9d9c-281f290d3a37"
 
 # - name: Backup important data to Azure each week
 #   hosts: rpi
@@ -21,3 +27,20 @@
 #         job_name: "{{item.job_name}}"
 
 
+# TODO: move this into new backup container project
+# backup_jobs:
+#   - path: /home/pi/homeassistant_data
+#     dest: "/home/pi/homeassistant_data_{{ansible_date_time.date}}.tar.gz"
+#     job_name: homeassistant_data
+
+#   - path: /home/pi/mealie_data
+#     dest: "/home/pi/mealie_data_{{ansible_date_time.date}}.tar.gz"
+#     job_name: mealie_data
+
+#   - path: /home/pi/grafana
+#     dest: "/home/pi/grafana_data_{{ansible_date_time.date}}.tar.gz"
+#     job_name: grafana_data
+
+#   - path: /home/pi/drone_data
+#     dest: "/home/pi/drone_data_{{ansible_date_time.date}}.tar.gz"
+#     job_name: drone_data
