--- a/playbooks/base_app_infra/001_docker.yml
+++ b/playbooks/base_app_infra/001_docker.yml
@@ -1,8 +1,6 @@
 # Note: docker needs to be installed manually onto room_of_requirement!
 - name: Install Docker
-  hosts:
-    - bananapi
-    - rpi
+  hosts: web_servers
   become: true
   roles:
     - role: abbottland.docker.docker
