--- a/playbooks/npm_registry/main.yml
+++ b/playbooks/npm_registry/main.yml
@@ -11,7 +11,7 @@
   tasks:
     - name: Get Verdaccio Token
       ansible.builtin.uri:
-        url: "{{verdaccio_public_proto}}://{{verdaccio_public_url}}/-/user/org.couchdb.user:{{verdaccio_user}}"
+        url: "{{ verdaccio_public_proto }}://{{ verdaccio_public_url }}/-/user/org.couchdb.user:{{ verdaccio_user }}"
         method: PUT
         body_format: json
         status_code:
@@ -24,39 +24,48 @@
         body: '{"name":"{{ verdaccio_user }}","password":"{{ verdaccio_pw }}"}'
         return_content: true
       register: token_response
+
     - name: Set Token
       ansible.builtin.set_fact:
-        verdaccio_token: "{{(token_response.content | from_json).token }}"
-    - debug:
-        msg: "Response: {{verdaccio_token}}"
+        verdaccio_token: "{{ (token_response.content | from_json).token }}"
+
+    - name: Show verdaccio_token
+      ansible.builtin.debug:
+        msg: "Response: {{ verdaccio_token }}"
         
+- name: Traefik configuration for verdaccio
+  hosts: bananapi
+  roles:
+    - role: abbottland.ingress.traefik_app
+      traefik_app_file_name: 'verdaccio.nas.local.yml'
+
 - name: Configure elder_wand to connect to registry
   hosts: elder_wand
   tasks:
     - name: Ping host
-      win_ping: {}
+      ansible.windows.win_ping: {}
 
     - name: Copy a single file
-      win_copy:
+      ansible.windows.win_copy:
         src: ./files/.npmrc
         dest: C:\Users\pbabb\.npmrc
 
     - name: Set an environment variable for machine (NPM_REGISTRY)
-      win_environment:
+      ansible.windows.win_environment:
         state: present
         name: NPM_REGISTRY
         value: "{{ verdaccio_public_url }}"
         level: machine
 
     - name: Set an environment variable for machine (NPM_REGISTRY_PROTO)
-      win_environment:
+      ansible.windows.win_environment:
         state: present
         name: NPM_REGISTRY_PROTO
         value: "{{ verdaccio_public_proto }}"
         level: machine
 
     - name: Set an environment variable for machine (NPM_TOKEN)
-      win_environment:
+      ansible.windows.win_environment:
         state: present
         name: NPM_TOKEN
         value: "{{ hostvars['room_of_requirement'].verdaccio_token }}"
