--- a/roles/home.drone-server/tasks/main.yml
+++ b/roles/home.drone-server/tasks/main.yml
@@ -1,9 +1,11 @@
-- ansible.builtin.file:
-    path: "{{ drone_data_dir}}"
+- name: Ensure drone data directory exists
+  ansible.builtin.file:
+    path: "{{ drone_data_dir }}"
     state: directory
     mode: '0755'  
 
-- community.docker.docker_compose:
+- name: Setup drone server
+  community.docker.docker_compose:
     project_name: drone_server
     
     definition:
@@ -13,16 +15,15 @@
           container_name: drone
           image: drone/drone:2
           environment:
-            
             DRONE_GITHUB_CLIENT_ID: "{{ drone.github_client_id }}"
             DRONE_GITHUB_CLIENT_SECRET: "{{ drone.github_client_secret }}"
             DRONE_RPC_SECRET: "{{ drone.shared_secret }}"
             DRONE_SERVER_HOST: "{{ drone_server_host }}"
             DRONE_SERVER_PROTO: https
             DRONE_USER_FILTER: "{{ drone_user_filter }}"
-            DRONE_USER_CREATE: "username:{{drone_admin}},admin:true"
+            DRONE_USER_CREATE: "username:{{ drone_admin }},admin:true"
           volumes:
-            - "{{ drone_data_dir}}:/data"
+            - "{{ drone_data_dir }}:/data"
           restart: unless-stopped
           ports:
             - 9926:80
