--- a/group_vars/all.yml
+++ b/group_vars/all.yml
@@ -13,8 +13,8 @@ docker_registry_mirror_port: 5002
 docker_registry_mirror_ui_port: 5003
 
 drone_server_host: drone.abbottland.io
-drone_user_filter: pbabbott
-drone_admin: pbabbott
+drone_server_user_filter: pbabbott
+drone_server_admin: pbabbott
 
 verdaccio_public_proto: https
 verdaccio_public_url: verdaccio.nas.local.abbottland.io
