--- a/playbooks/drone/main.yml
+++ b/playbooks/drone/main.yml
@@ -8,6 +8,11 @@
   hosts: rpi
   roles:
     - role: home.drone-server
+      drone_github_client_id: "{{ drone.github_client_id }}"
+      drone_github_client_secret: "{{ drone.github_client_secret }}"
+      drone_shared_secret: "{{ drone.shared_secret }}"
+
     - role: home.drone-docker-runner
+      drone_shared_secret: "{{ drone.shared_secret }}"
 
 # TODO: Setup elder_wand drone configuration with ansible.
