Rearrange mealie into playbook

--- a/playbooks/004_reverse_proxy.yml
+++ b/playbooks/004_reverse_proxy.yml
@@ -12,8 +12,8 @@
       # - pihole.local.yml
       # Raspberry PI
       # - drone.yml
-      - mealie.yml
-      - dashboard.local.yml
+      # - mealie.yml
+      # - dashboard.local.yml
       # Room Of Requirement
       - plex.yml
       - portal.nas.local.yml
