Get portainer running on RPI

--- a/group_vars/web_servers.yml
+++ b/group_vars/web_servers.yml
@@ -17,3 +17,6 @@ docker_daemon_registry_mirror: https://registry-mirror.nas.local.abbottland.io
 
 vector_config_directory: /home/pi/app_config/vector
 vector_loki_host: https://loki.nas.local.abbottland.io
+
+
+portainer_data_dir: /home/pi/app_config/portainer_data
