--- a/playbooks/base_app_infra/files/pihole/02-internal.conf
+++ b/playbooks/base_app_infra/files/pihole/02-internal.conf
@@ -8,3 +8,6 @@ address=/.local.abbottland.io/192.168.4.144
 
 domain=nas.local.abbottland.io
 address=/.nas.local.abbottland.io/192.168.4.144
+
+domain=raspberrypi.local.abbottland.io
+address=/.raspberrypi.local.abbottland.io/192.168.4.144
