major refactor to setup grafana, loki, vector, and pironman

--- a/ansible_collections/abbottland/docker/roles/docker_daemon/meta/argument_specs.yml
+++ b/ansible_collections/abbottland/docker/roles/docker_daemon/meta/argument_specs.yml
@@ -13,3 +13,7 @@ argument_specs:
         required: true
         type: "raw"
         description: "raw value for dameon settings"
+      docker_daemon_directory:
+        required: false
+        type: str
+        description: "Directory where docker daemon.json lives."
