--- a/playbooks/grafana_loki/files/loki-config.yml
+++ b/playbooks/grafana_loki/files/loki-config.yml
@@ -5,11 +5,11 @@ server:
   grpc_listen_port: 9096
 
 common:
-  path_prefix: /tmp/loki
+  path_prefix: /loki_data
   storage:
     filesystem:
-      chunks_directory: /tmp/loki/chunks
-      rules_directory: /tmp/loki/rules
+      chunks_directory: /loki_data/chunks
+      rules_directory: /loki_data/rules
   replication_factor: 1
   ring:
     instance_addr: 127.0.0.1
